--- a/adhd.rmd
+++ b/adhd.rmd
@@ -39,168 +39,34 @@ Gradering av svårighet:
 - Svårigheter att vänta på sin tur (tex vid kö).
 - Avbryter eller inkräktar på andra (tex använder andras saker utan att fråga om lov).
 
-<!-- Från DSM-5: -->
+## Differentialdiagnostik
 
-<!-- ### Diagnostic Criteria  -->
+Ökad motorisk aktivitet kan särskiljas från stereotypa rörelser vid autism genom att det senare vanligen är repetetivt, emedan rastlösheten vid ADHD är generaliserad och ej stereotyp.
 
-<!-- A. A persistent pattern of inattention and/or hyperactivity-impulsivity that interferes with functioning or development, as characterized by (1) and/or (2): -->
+ADHD-liknande symtom kan förekomma vid intellektell dysfunktion då personen sätts i en akademisk miljö som ej är i nivå med intellektuell förmåga. Symtomen förekommer då vanligen ej i tex hemmamiljö.
 
-<!-- 1. Inattention: Six (or more) of the following symptoms have persisted for at least 6 months to a degree that is inconsistent with developmental level and that negatively impacts directly on social and academic/occupational activities: -->
+Ångestsyndrom kan ge ouppmärksamhet. Vid ADHD är symtomen ej kopplade till oro och ältande.
 
-<!-- Note: The symptoms are not solely a manifestation of oppositional behavior, defiance, hostility, or failure to understand tasks or instructions. For older adolescents and adults (age 17 and older), at least five symptoms are required. -->
-<!-- a. Often fails to give close attention to details or makes careless mistakes in schoolwork, at work, or during other activities (e.g., overlooks or misses details, work is inaccurate). -->
-<!-- b. Often has difficulty sustaining attention in tasks or play activities (e.g., has difficulty remaining focused during lectures, conversations, or lengthy reading). -->
-<!-- c. Often does not seem to listen when spoken to directly (e.g., mind seems elsewhere, even in the absence of any obvious distraction). -->
-<!-- d. Often does not follow through on instructions and fails to finish schoolwork, chores, or duties in the workplace (e.g., starts tasks but quickly loses focus and is easily sidetracked). -->
-<!-- e. Often has difficulty organizing tasks and activities (e.g., difficulty managing sequential tasks; difficulty keeping materials and belongings in order; messy, disorganized work; has poor time management; fails to meet deadlines). -->
-<!-- f. Often avoids, dislikes, or is reluctant to engage in tasks that require sustained mental effort (e.g., schoolwork or homework; for older adolescents and adults, preparing reports, completing forms, reviewing lengthy papers). -->
-<!-- g. Often loses things necessary for tasks or activities (e.g., school materials, pencils, books, tools, wallets, keys, papenwork, eyeglasses, mobile telephones). -->
-<!-- h. Is often easily distracted by extraneous stimuli (for older adolescents and adults, may include unrelated thoughts). -->
-<!-- i. Is often forgetful in daily activities (e.g., doing chores, running errands; for older adolescents and adults, returning calls, paying bills, keeping appointments). -->
+Vid depressiva episoder kan oförmåga att fokusera uppträda, men föreligger endast under själva episoden.
 
-<!-- 2. Hyperactivity and impuisivity: Six (or more) of the following symptoms have persisted for at least 6 months to a degree that is inconsistent with developmental level and that negatively impacts directly on social and academic/occupational activities:  -->
+Vid bipolärt syndrom kan ökad aktivitet, nedsatt koncentration och impulsivitet förekomma, men uppträder då episodiskt och tillsammans med andra bipolära symtom (förhöjd grundstämning, grandiositet etc). Bipolärt syndrom är ovanligt före tonåren.
 
-<!-- Note: The symptoms are not solely a manifestation of oppositional behavior, defiance, hostility, or a failure to understand tasks or instructions. For older adolescents and adults (age 17 and older), at least five symptoms are required. -->
-<!-- a. Often fidgets with or taps hands or feet or squirms in seat. -->
-<!-- b. Often leaves seat in situations when remaining seated is expected (e.g., leaves his or her place in the classroom, in the office or other workplace, or in other situations that require remaining in place). -->
-<!-- c. Often runs about or climbs in situations where it is inappropriate. (Note: In adolescents or adults, may be limited to feeling restless.)d. Often unable to play or engage in leisure activities quietly. -->
-<!-- e. Is often “on the go,” acting as if “driven by a motor” (e.g., is unable to be or uncomfortable being still for extended time, as in restaurants, meetings; may be experienced by others as being restless or difficult to keep up with). -->
-<!-- f. Often talks excessively. -->
-<!-- g. Often blurts out an answer before a question has been completed (e.g., completes people’s sentences; cannot wait for turn in conversation). -->
-<!-- h. Often has difficulty waiting his or her turn (e.g., while waiting in line). -->
-<!-- i. Often interrupts or intrudes on others (e.g., butts into conversations, games, or activities; may start using other people’s things without asking or receiving permission; for adolescents and adults, may intrude into or take over what others are doing). -->
+Substansbrukssyndrom. Tydliga symtom som vid ADHD före sustansbruket började bör föreligga för att ADHD-diagnos skall ställas.
 
-<!-- B. Several inattentive or hyperactive-impulsive symptoms were present prior to age 12 years. -->
+## Samsjuklighet
 
-<!-- C. Several inattentive or hyperactive-impulsive symptoms are present in two or more settings (e.g., at home, school, or work; with friends or relatives; in other activities). -->
-
-<!-- D. There is clear evidence that the symptoms interfere with, or reduce the quality of, social, academic, or occupational functioning. -->
-
-<!-- E. The symptoms do not occur exclusively during the course of schizophrenia or another psychotic disorder and are not better explained by another mental disorder (e.g., mood disorder, anxiety disorder, dissociative disorder, personality disorder, substance intoxication or withdrawal). -->
-
-<!-- _Specify_ whether: -->
-
-<!-- 314.01 (F90.2) Combined presentation: If both Criterion A1 (inattention) and Criterion A2 (hyperactivity-impulsivity) are met for the past 6 months. -->
-
-<!-- 314.00 (F90.0) Predominantly inattentive presentation: If Criterion A1 (inattention) is met but Criterion A2 (hyperactivity-impulsivity) is not met for the past 6 months. -->
-
-<!-- 314.01 (F90.1) Predominantly hyperactive/impulsive presentation: If Criterion A2 (hyperactivity-impulsivity) is met and Criterion A1 (inattention) is not met for the past 6 months. -->
-
-<!-- _Specify_ if:in partial remission: When full criteria were previously met, fewer than the full criteria have been met for the past 6 months, and the symptoms still result in impairment in social, academic, or occupational functioning. -->
-
-<!-- _Specify_ current severity:Mild: Few, if any, symptoms in excess of those required to make the diagnosis are present, and symptoms result in no more than minor impairments in social or occupational functioning. -->
-
-<!-- Moderate: Symptoms or functional impairment between “mild” and “severe” are present. -->
-
-<!-- Severe: Many symptoms in excess of tliose required to mal<e tlie diagnosis, or several symptoms that are particularly severe, are present, or the symptoms result in marked impairment in social or occupational functioning. -->
-
-<!-- ### Diagnostic Features  -->
-
-<!-- The essential feature of attention-deficit/hyperactivity disorder (ADHD) is a persistent pattern of inattention and/or hyperactivity-impulsivity that interferes with functioning or development. Inattention manifests behaviorally in ADHD as wandering off task, lacking persistence, having difficulty sustaining focus, and being disorganized and is not due to defiance or lack of comprehension. Hyperactivity refers to excessive motor activity (such as a child running about) when it is not appropriate, or excessive fidgeting, tapping, or talkativeness. In adults, hyperactivity may manifest as extreme restlessness or wearing others out with their activity. Impulsivity refers to hasty actions that occur in the moment without forethought and that have high potential for harm to the individual (e.g., darting into the street without looking). Impulsivity may reflect a desire for immediate rewards or an inability to delay gratification. Impulsive behaviors may manifest as social intrusiveness (e.g., interrupting others excessively) and/or as making important decisions without consideration of long-term consequences (e.g., taking a job without adequate information). -->
-
-<!-- ADHD begins in childhood. The requirement that several symptoms be present before age 12 years conveys the importance of a substantial clinical presentation during childhood. At the same time, an earlier age at onset is not specified because of difficulties in establishing precise childhood onset retrospectively. Adult recall of childhood symptoms tends to be unreliable, and it is beneficial to obtain ancillary information. -->
-
-<!-- Manifestations of the disorder must be present in more than one setting (e.g., home and school, work). Confirmation of substantial symptoms across settings typically cannot be done accurately without consulting informants who have seen the individual in those settings. Typically, symptoms vary depending on context within a given setting. Signs of the disorder may be minimal or absent when the individual is receiving frequent rewards for appropriate behavior, is under close supervision, is in a novel setting, is engaged in especially interesting activities, has consistent external stimulation (e.g., via electronic screens), or is interacting in one-on-one situations (e.g., the clinician's office). -->
-
-<!-- ### Associated Features Supporting Diagnosis  -->
-
-<!-- Mild delays in language, motor, or social development are not specific to ADHD but often cooccur. Associated features may include low frustration tolerance, irritability, or mood lability.  -->
-
-<!-- Even in the absence of a specific learning disorder, academic or work performance is often impaired. Inattentive behavior is associated with various underlying cognitive processes, and individuals with ADHD may exhibit cognitive problems on tests of attention, executive function, or memory, although these tests are not sufficiently sensitive or specific to serve as diagnostic indices. By early adulthood, ADHD is associated with an increased risk of suicide attempt, primarily when comorbid with mood, conduct, or substance use disorders. -->
-
-<!-- No biological marker is diagnostic for ADHD. As a group, compared with peers, children with ADHD display increased slow wave electroencephalograms, reduced total brain volume on magnetic resonance imaging, and possibly a delay in posterior to anterior cortical maturation, but these findings are not diagnostic. In the uncommon cases where there is a known genetic cause (e.g Fragile X syndrome, 22qll deletion syndrome), the ADHD presentation should still be diagnosed. -->
-
-
-<!-- ### Development and Course  -->
-
-<!-- Many parents first observe excessive motor activity when the child is a toddler, but symptoms are difficult to distinguish from highly variable normative behaviors before age 4 years. ADHD is most often identified during elementary school years, and inattention becomes more prominent and impairing. The disorder is relatively stable through early adolescence, but some individuals have a worsened course with development of antisocial behaviors. In most individuals with ADHD, symptoms of motoric hyperactivity become less obvious in adolescence and adulthood, but difficulties with restlessness, inattention, poor planning, and impulsivity persist. A substantial proportion of children with ADHD remain relatively impaired into adulthood. -->
-
-<!-- In preschool, the main manifestation is hyperactivity. Inattention becomes more prominent during elementary school. During adolescence, signs of hyperactivity (e.g., running and climbing) are less common and may be confined to fidgetiness or an inner feeling of jitteriness, restlessness, or impatience. In adulthood, along with inattention and restlessness, impulsivity may remain problematic even when hyperactivity has diminished. -->
-
-<!-- ### Risk and Prognostic Factors  -->
-
-<!-- Temperamental. ADHD is associated with reduced behavioral inhibition, effortful control, or constraint; negative emotionality; and/or elevated novelty seeking. These traits may predispose some children to ADHD but are not specific to the disorder. -->
-
-<!-- Environmental. Very low birth weight (less than 1,500 grams) conveys a two- to threefold risk for ADHD, but most children with low birth weight do not develop ADHD. Although ADHD is correlated with smoking during pregnancy, some of this association reflects common genetic risk. A minority of cases may be related to reactions to aspects of diet. There may be a history of child abuse, neglect, multiple foster placements, neurotoxin exposure (e.g., lead), infections (e.g., encephalitis), or alcohol exposure in utero. Exposure to environmental toxicants has been correlated with subsequent ADHD, but it is not known whether these associations are causal. -->
-
-<!-- Genetic and physiological. ADHD is elevated in the first-degree biological relatives of individuals with ADHD. The heritability of ADHD is substantial. While specific genes have been correlated with ADHD, they are neither necessary nor sufficient causal factors.  -->
-
-<!-- Visual and hearing impairments, metabolic abnormalities, sleep disorders, nutritional deficiencies, and epilepsy should be considered as possible influences on ADHD symptoms. -->
-
-<!-- ADHD is not associated with specific physical features, although rates of minor physical anomalies (e.g., hypertelorism, highly arched palate, low-set ears) may be relatively elevated. Subtle motor delays and other neurological soft signs may occur. (Note that marked co-occurring clumsiness and motor delays should be coded separately [e.g., developmental coordination disorder].) -->
-
-<!-- Course modifiers. Family interaction patterns in early childhood are unlikely to cause  -->
-
-<!-- ADHD but may influence its course or contribute to secondary development of conduct problems. -->
-
-<!-- ### Culture-Related Diagnostic Issues  -->
-
-<!-- Differences in ADHD prevalence rates across regions appear attributable mainly to different diagnostic and methodological practices. However, there also may be cultural variation in attitudes toward or interpretations of children's behaviors. Clinical identification rates in the United States for African American and Latino populations tend to be lower than for Caucasian populations. Informant symptom ratings may be influenced by cultural group of the child and the informant, suggeshng that culturally appropriate practices are relevant in assessing ADHD. -->
-
-<!-- ### Gender-Related Diagnostic Issues  -->
-
-<!-- ADHD is more frequent in males than in females in the general population, with a ratio of approximately 2:1 in children and 1.6:1 in adults. Females are more likely than males to present primarily with inattentive features. -->
-
-<!-- ### Functional Consequences of Attention-Deficit/Hyperactivity Disorder  -->
-
-<!-- ADHD is associated with reduced school performance and academic attainment, social rejection, and, in adults, poorer occupational performance, attainment, attendance, and higher probability of unemployment as well as elevated interpersonal conflict. Children with ADHD are significantly more likely than their peers without ADHD to develop conduct disorder in adolescence and antisocial personality disorder in adulthood, consequently increasing the likelihood for substance use disorders and incarceration. The risk of subsequent substance use disorders is elevated, especially when conduct disorder or antisocial personality disorder develops. Individuals with ADHD are more likely than peers to be injured. Traffic accidents and violations are more frequent in drivers with ADHD.  -->
-
-<!-- There may be an elevated likelihood of obesity among individuals with ADHD. -->
-
-<!-- Inadequate or variable self-application to tasks that require sustained effort is often interpreted by others as laziness, irresponsibility, or failure to cooperate. Family relationships may be characterized by discord and negative interactions. Peer relationships afe often disrupted by peer rejection, neglect, or teasing of the individual with ADHD. On average, individuals with ADHD obtain less schooling, have poorer vocational achievement, and have reduced intellectual scores than their peers, although there is great variability. In its severe form, the disorder is markedly impairing, affecting social, familial, and scholastic/occupational adjustment. -->
-
-<!-- Academic deficits, school-related problems, and peer neglect tend to be most associated with elevated symptoms of inattention, whereas peer rejection and, to a lesser extent, accidental injury are most salient with marked symptoms of hyperactivity or impulsivity. -->
-
-### Differential Diagnosis 
-
-Oppositional defiant disorder. Individuals with oppositional defiant disorder may resist work or school tasks that require self-application because they resist conforming to others' demands. Their behavior is characterized by negativity, hostility, and defiance. 
-
-These symptoms must be differentiated from aversion to school or mentally demanding tasks due to difficulty in sustaining mental effort, forgetting instructions, and impulsivity in individuals with ADHD. Complicating the differential diagnosis is the fact that some individuals with ADHD may develop secondary oppositional attitudes toward such tasks and devalue their importance.
-
-Intermittent explosive disorder. ADHD and intermittent explosive disorder share high levels of impulsive behavior. However, individuals with intermittent explosive disorder show serious aggression toward others, which is not characteristic of ADHD, and they do not experience problems with sustaining attention as seen in ADHD. In addition, intermittent explosive disorder is rare in childhood. Intermittent explosive disorder may be diagnosed in the presence of ADHD.
-
-Other neurodevelopmental disorders. The increased motoric activity that may occur in 
-
-ADHD must be distinguished from the repetitive motor behavior that characterizes stereotypic movement disorder and some cases of autism spectrum disorder. In stereotypic movement disorder, the motoric behavior is generally fixed and repetitive (e.g., body rocking, self-biting), whereas the fidgetiness and restlessness in ADHD are typically generalized and not characterized by repetitive stereotypic movements. In Tourette's disorder,frequent multiple tics can be mistaken for the generalized fidgetiness of ADHD. Prolonged observation may be needed to differentiate fidgetiness from bouts of multiple tics.
-
-Specific learning disorder. Children with specific learning disorder may appear inattentive because of frustration, lack of interest, or limited ability. However, inattention in individuals with a specific learning disorder who do not have ADHD is not impairing outside of academic work.
-
-Intellectual disability (intellectual developmental disorder). Symptoms of ADHD are common among children placed in academic settings that are inappropriate to their intellectual ability. In such cases, the symptoms are not evident during non-academic tasks. A diagnosis of ADHD in intellectual disability requires that inattention or hyperactivity be excessive for mental age.
-
-Autism spectrum disorder. Individuals with ADHD and those with autism spectrum disorder exhibit inattention, social dysfunction, and difficult-to-manage behavior. The social dysfunction and peer rejection seen in individuals with ADHD must be distinguished from the social disengagement, isolation, and indifference to facial and tonal communication cues seen in individuals with autism spectrum disorder. Children with autism spectrum disorder may display tantrums because of an inability to tolerate a change from their expected course of events. In contrast, children with ADHD may misbehave or have a tantrum during a major transition because of impulsivity or poor self-control.
-
-Reactive attachment disorder. Children with reactive attachment disorder may show social disinhibition, but not the full ADHD symptom cluster, and display other features such as a lack of enduring relationships that are not characteristic of ADHD.
-
-Anxiety disorders. ADHD shares symptoms of inattention with anxiety disorders. Individuals with ADHD are inattentive because of their attraction to external stimuli, new activities, or preoccupation with enjoyable activities. This is distinguished from the inattention due to worry and rumination seen in anxiety disorders. Restlessness might be seen in anxiety disorders. However, in ADHD, the symptom is not associated with worry and rumination.
-
-Depressive disorders. Individuals with depressive disorders may present with inability to concentrate. However, poor concentration in mood disorders becomes prominent only during a depressive episode.
-
-Bipolar disorder. Individuals with bipolar disorder may have increased activity, poor concentration, and increased impulsivity, but these features are episodic, occurring several days at a time. In bipolar disorder, increased impulsivity or inattention is accompanied by elevated mood, grandiosity, and other specific bipolar features. Children with 
-
-ADHD may show significant changes in mood within the same day; such lability is distinct from a manic episode, which must last 4 or more days to be a clinical indicator of bipolar disorder, even in children. Bipolar disorder is rare in preadolescents, even when severe irritability and anger are prominent, whereas ADHD is common among children and adolescents who display excessive anger and irritability.
-
-Disruptive mood dysregulation disorder. Disruptive mood dysregulation disorder is characterized by pervasive irritability, and intolerance of frustration, but impulsiveness and disorganized attenhon are not essential features. However, most children and adolescents with the disorder have symptoms that also meet criteria for ADHD, which is diagnosed separately.
-
-Substance use disorders. Differentiating ADHD from substance use disorders may be problematic if the first presentation of ADHD symptoms follows the onset of abuse or frequent use. Clear evidence of ADHD before substance misuse from informants or previous records may be essential for differential diagnosis.
-
-Personality disorders. In adolescents and adults, it may be difficult to distinguish ADHD from borderline, narcissistic, and other personality disorders. All these disorders tend to share the features of disorganization, social intrusiveness, emotional dysregulation, and cognitive dysregulation. However, ADHD is not characterized by fear of abandonment, self-injury, extreme ambivalence, or other features of personality disorder. It may take extended clinical observation, informant interview, or detailed history to distinguish impulsive, socially intrusive, or inappropriate behavior from narcissistic, aggressive, or domineering behavior to make this differential diagnosis.
-
-Psychotic disorders. ADHD is not diagnosed if the symptoms of inattention and hyperactivity occur exclusively during the course of a psychotic disorder.
-
-Medication-induced symptoms of ADHD. Symptoms of inattention, hyperactivity, or impulsivity attributable to the use of medication (e.g., bronchodilators, isoniazid, neuroleptics [resulting in akathisia], thyroid replacement medication) are diagnosed as other specified or unspecified other (or unknown) substance-related disorders.
-
-Neurocognitive disorders. Early major neurocognitive disorder (dementia) and/or mild neurocognitive disorder are not known to be associated with ADHD but may present with similar clinical features. These conditions are distinguished from ADHD by their late onset.
-
-### Comorbidity 
-
-In clinical settings, comorbid disorders are frequent in individuals whose symptoms meet criteria for ADHD. In the general population, oppositional defiant disorder co-occurs with 
-
-ADHD in approximately half of children with the combined presentation and about a quarter with the predominantly inattentive presentation. Conduct disorder co-occurs in about a quarter of children or adolescents with the combined presentation, depending on age and setting. Most children and adolescents with disruptive mood dysregulation disorder have symptoms that also meet criteria for ADHD; a lesser percentage of children with ADHD have symptoms that meet criteria for disruptive mood dysregulation disorder. Specific learning disorder commonly co-occurs with ADHD. Anxiety disorders and major depressive disorder occur in a minority of individuals with ADHD but more often than in the general population. Intermittent explosive disorder occurs in a minority of adults with ADHD, but at rates above population levels. Although substance use disorders are relatively more frequent among adults with ADHD in the general population, the disorders are present in only a minority of adults with ADHD. In adults, antisocial and other personality disorders may co-occur with ADHD. Other disorders that may co-occur with ADHD include obsessive-compulsive disorder, tic disorders, and autism spectrum disorder.
-
-
-## Behandling
+Trotssyndrom och uppförandestöring vanligt. Substansbrukssynbdrom, ångestsyndrom och depression är något vanligare vid ADHD än i allmänna befolkningen, men uppträder endast hos en minoritet. Annan samsjuklighet som förekommer är tex antosocial personlighetsstörning, OCD, autism.
 
 ## Läkemedel för ADHD {#adhd-medication}
+
+Elvanse är förstahandsval för vuxna. Vid otillräcklig effekt kan metylfenidat provas. När båda dessa provats i sex veckor i maxdos och om effekt uteblir kan atomoxetin provas istället.
+
+Omkring 70% svarar på behandling och förbätrar både symtom på ouppmärksamhet och hyperaktivitet [@Kolar2008]. Läkemedlen blockerar återupptag av noradrenalin och dopamin och amfetamin ökar frisättningen av dopamin. Metylfenidat ökar frisättningen av noradrenalin i delar av hjärnan [@Kolar2008].
+
+Vanliga biverkningar är insomni, illamående, anorexi, minskad aptit, viktförlust, huvudvärk, irritabilitet, humörsvängningar, buksmärta, ökad puls, förhöjt blodtryck. Kan även ge tics. I ovanliga fall kramper, psykos, hepatotoxicitet. Många biverkningar minskar över tid. Vissa biverkningar, tex irritabilitet, som uppträder sent på dagen kan bero på rebound-fenomen och föranleda extra dos av CS på eftermiddagen. Samma gäller för insomni.
+
+Atomoxtin (SNRI) kan ha en viss ångestlindrande effekt. Metaboliseras via CYP2D6 och kan därför vara svårt att kombinera med SSRI. Bupropion är kan användas som andrhandsval mot ADHD-symtom [@Kolar2008].
+
 
 ```{r adhd-medication-one } 
 
@@ -235,7 +101,7 @@ knitr::kable(tbl1, align = "llccc", caption = "Tabell farmakokinetik ADHD-läkem
 
 ``` 
 
-**Tabell \@ref(tab:table-adhd-dosing)** visar dosering för olika läkemedel mot ADHD.
+**Tabell \@ref(tab:table-adhd-dosing)** visar dosering för olika läkemedel mot ADHD. För vuxna kan upp till 108 mg Concerta behövas [@Kolar2008].
 
 ```{r table-adhd-dosing } 
 
